--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Mem Slider</title>
   </head>
   <body>
-    <h1>Проверьте пожалуйста моб работу в четвергы</h1>
+    <header class="header"></header>
+    <main class="main"></main>
+    <footer class="footer"></footer>
   </body>
+  <script src="./index.js"></script>
 </html>
