add: add positioning styling

--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -20,28 +20,53 @@
           <div class="slider">
             <div class="slides">
               <div class="slide" id="slide_1">
-                <img class="slide-img" src="./slide_1.jpeg" alt="1 slide" />
+                <div class="slide-content">
+                  <img class="slide-img" src="./slide_1.jpeg" alt="1 slide" />
+                  <p class="subtitle">дел</p>
+                </div>
               </div>
               <div class="slide" id="slide_2">
-                <img class="slide-img" src="./slide_2.jpeg" alt="2 slide" />
+                <div class="slide-content">
+                  <img class="slide-img" src="./slide_2.jpeg" alt="2 slide" />
+                  <p class="subtitle">Хороший прикол...</p>
+                </div>
               </div>
               <div class="slide" id="slide_3">
-                <img class="slide-img" src="./slide_3.jpeg" alt="3 slide" />
+                <div class="slide-content">
+                  <img class="slide-img" src="./slide_3.jpeg" alt="3 slide" />
+                  <p class="subtitle">*слайд 3*</p>
+                </div>
               </div>
               <div class="slide" id="slide_4">
-                <img class="slide-img" src="./slide_4.jpeg" alt="4 slide" />
+                <div class="slide-content">
+                  <img class="slide-img" src="./slide_4.jpeg" alt="4 slide" />
+                  <p class="subtitle">Ел как раньше и уже поху...</p>
+                </div>
               </div>
               <div class="slide" id="slide_5">
-                <img class="slide-img" src="./slide_5.jpeg" alt="5 slide" />
+                <div class="slide-content">
+                  <img class="slide-img" src="./slide_5.jpeg" alt="5 slide" />
+                  <p class="subtitle">лайк если было</p>
+                </div>
               </div>
             </div>
           </div>
           <div class="navigation">
-            <a class="nav-link" href="#slide_1"></a>
-            <a class="nav-link" href="#slide_2"></a>
-            <a class="nav-link" href="#slide_3"></a>
-            <a class="nav-link" href="#slide_4"></a>
-            <a class="nav-link" href="#slide_5"></a>
+            <a class="nav-link" href="#slide_1">
+              <div class="nav-link-circle"></div>
+            </a>
+            <a class="nav-link" href="#slide_2">
+              <div class="nav-link-circle"></div>
+            </a>
+            <a class="nav-link" href="#slide_3">
+              <div class="nav-link-circle"></div>
+            </a>
+            <a class="nav-link" href="#slide_4">
+              <div class="nav-link-circle"></div>
+            </a>
+            <a class="nav-link" href="#slide_5">
+              <div class="nav-link-circle"></div>
+            </a>
           </div>
         </div>
       </main>
