--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -12,7 +12,7 @@
     <div class="main-container">
       <header class="header">
         <div class="header-container">
-          <h1 class="header-title">MEMES</h1>
+          <h1 class="header-title">МЕМЫ</h1>
         </div>
       </header>
       <main class="main">
@@ -73,4 +73,5 @@
       <footer class="footer"></footer>
     </div>
   </body>
+  <script src="./index.js"></script>
 </html>
