--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="shortcut icon" href="./Apple_meme.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="./assets/Apple_meme.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Mem Slider</title>
@@ -18,55 +22,70 @@
       <main class="main">
         <div class="slider-container">
           <div class="slider">
+            <input type="radio" name="navigation" id="s1" checked />
+            <input type="radio" name="navigation" id="s2" />
+            <input type="radio" name="navigation" id="s3" />
+            <input type="radio" name="navigation" id="s4" />
+            <input type="radio" name="navigation" id="s5" />
             <div class="slides">
               <div class="slide" id="slide_1">
                 <div class="slide-content">
-                  <img class="slide-img" src="./slide_1.jpeg" alt="1 slide" />
+                  <img
+                    class="slide-img"
+                    src="./assets/slide_1.jpeg"
+                    alt="1 slide"
+                  />
                   <p class="subtitle">дел</p>
                 </div>
               </div>
               <div class="slide" id="slide_2">
                 <div class="slide-content">
-                  <img class="slide-img" src="./slide_2.jpeg" alt="2 slide" />
+                  <img
+                    class="slide-img"
+                    src="./assets/slide_2.jpeg"
+                    alt="2 slide"
+                  />
                   <p class="subtitle">Хороший прикол...</p>
                 </div>
               </div>
               <div class="slide" id="slide_3">
                 <div class="slide-content">
-                  <img class="slide-img" src="./slide_3.jpeg" alt="3 slide" />
+                  <img
+                    class="slide-img"
+                    src="./assets/slide_3.jpeg"
+                    alt="3 slide"
+                  />
                   <p class="subtitle">*слайд 3*</p>
                 </div>
               </div>
               <div class="slide" id="slide_4">
                 <div class="slide-content">
-                  <img class="slide-img" src="./slide_4.jpeg" alt="4 slide" />
+                  <img
+                    class="slide-img"
+                    src="./assets/slide_4.jpeg"
+                    alt="4 slide"
+                  />
                   <p class="subtitle">Ел как раньше и уже поху...</p>
                 </div>
               </div>
               <div class="slide" id="slide_5">
                 <div class="slide-content">
-                  <img class="slide-img" src="./slide_5.jpeg" alt="5 slide" />
+                  <img
+                    class="slide-img"
+                    src="./assets/slide_5.jpeg"
+                    alt="5 slide"
+                  />
                   <p class="subtitle">лайк если было</p>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="navigation">
-            <a class="nav-link" href="#slide_1">
-              <div class="nav-link-circle"></div>
-            </a>
-            <a class="nav-link" href="#slide_2">
-              <div class="nav-link-circle"></div>
-            </a>
-            <a class="nav-link" href="#slide_3">
-              <div class="nav-link-circle"></div>
-            </a>
-            <a class="nav-link" href="#slide_4">
-              <div class="nav-link-circle"></div>
-            </a>
-            <a class="nav-link" href="#slide_5">
-              <div class="nav-link-circle"></div>
-            </a>
+            <div class="navigation">
+              <label for="s1"></label>
+              <label for="s2"></label>
+              <label for="s3"></label>
+              <label for="s4"></label>
+              <label for="s5"></label>
+            </div>
           </div>
         </div>
       </main>
